--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
     </style>
 
     <script type = "text/javascript">
-        var login = new XMLHttpRequest();
+       /* var login = new XMLHttpRequest();
         login.open('POST', 'http://localhost:3000/user/login');
         login.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         login.responseText = 'plaintext';
@@ -25,11 +25,8 @@
             console.log(login.response);
         };
 
-        //login.send('email=jay.parekh0@gmail.com&password=password');
-
         $(document).ready(function() {
-            //displayPrice();
-        });
+        });*/
     </script>
 </head>
 
